--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>SimpleProducer</mainClass>
+                                    <mainClass>SimpleProducerFromReadySource</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
